tests/run-pass/get_current_dir.rs
// ignore-windows: TODO the windows hook is not done yet

fn main() {
    std::env::current_dir().unwrap();
}
